# Embedded_Linux

./: README.md
Admin_Linux/: README.md
Admin_Linux/1-Task1/: README.md  bashscript
Admin_Linux/2-Task2/: Binary_Search_0  Binary_search.c  README.md
Admin_Linux/3-Task3/: BashScript_Day3.sh  README.md  commands.list
Admin_Linux/4-Quiz/: README.md
Admin_Linux/4-Quiz/Quiz_1/: bashscrip_analysis  log_analysis.sh
Admin_Linux/5-Task5/: Bashscript_Day5  README.md
Admin_Linux/6-Task6/: README.md
Embedded_Linux/: README.md
Embedded_Linux/EmbeddedLinux_Lec1Tasks/EmbeddedLinux_Lec1Task1/: README.md
Embedded_Linux/EmbeddedLinux_Lec1Tasks/EmbeddedLinux_Lec1Task1/Dynamic_Library/: main.c
Embedded_Linux/EmbeddedLinux_Lec1Tasks/EmbeddedLinux_Lec1Task1/Dynamic_Library/Include/: math_operations.h
Embedded_Linux/EmbeddedLinux_Lec1Tasks/EmbeddedLinux_Lec1Task1/Dynamic_Library/Lib/: Addition.c  Division.c
Embedded_Linux/EmbeddedLinux_Lec1Tasks/EmbeddedLinux_Lec1Task2/: README.md
Embedded_Linux/EmbeddedLinux_Lec2Tasks/EmbeddedLinux_Lec2Task3/: README.md
Embedded_Linux/EmbeddedLinux_Lec2Tasks/EmbeddedLinux_Lec2Task4/: README.md
Embedded_Linux/EmbeddedLinux_Lec2Tasks/EmbeddedLinux_Lec2Task4/Simulation/: ClassWork_1.pdsprj  ClassWork_1.pdsprj.DESKTOP-MFVQVH2.alyma.workspace
Embedded_Linux/EmbeddedLinux_Lec3Tasks/: README.md
Embedded_Linux/EmbeddedLinux_Lec3Tasks/Calc_Project/: CMakeLists.txt
Embedded_Linux/EmbeddedLinux_Lec3Tasks/Calc_Project/Lib/: Modulus.c
Embedded_Linux/EmbeddedLinux_Lec4Tasks/: README.md
(+13 files in other folders)
